--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -13,3 +13,4 @@ jobs:
     uses: product-os/flowzone/.github/workflows/flowzone.yml@aethernet/cyclone-sbom-node
     secrets:
       FLOWZONE_TOKEN: ${{ secrets.FLOWZONE_TOKEN }}
+      DTRACK_TOKEN: ${{ secrets.DTRACK_TOKEN }}
